Fix grid horizontal scrolling

--- a/client/src/views/components/textInput/textInput.scss
+++ b/client/src/views/components/textInput/textInput.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  overflow: hidden;
 
 
   .text-input{
