--- a/client/src/views/subPages/report/report.scss
+++ b/client/src/views/subPages/report/report.scss
@@ -1,9 +1,10 @@
 .report{
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  align-items: flex-start;
+  overflow-x: auto;
+
+  overflow-y: auto;
 
   header{
     display: flex;
