--- a/client/src/views/subPages/testArea/testArea.scss
+++ b/client/src/views/subPages/testArea/testArea.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  overflow-x: scroll;
+
+  overflow-y: scroll;
 
   > *{
     margin: var(--spacing-4);
@@ -9,6 +12,7 @@
 
   .row{
     display: flex;
+    flex-wrap: wrap;
     align-items: flex-start;
     > *{
       margin: var(--spacing-3);
